--- a/resources/requirements_unique.txt
+++ b/resources/requirements_unique.txt
@@ -1,132 +1,132 @@
-olefile==0.46
-certipy==0.1.3
-traitlets==4.3.3
-bleach==3.1.4
-six==1.14.0
-PyWavelets==1.1.1
 llvmlite==0.31.0
-zipp==3.1.0webencodings==0.5.1
-jupyterhub==1.1.0
-partd==1.1.0
-mpmath==1.1.0
-jupyter-telemetry==0.0.5
-xlrd==1.2.0
-toolz==0.10.0
-attrs==19.3.0
-appdirs==1.4.3
-chardet==3.0.4
-dask==2.11.0
-filelock==3.0.12
-terminado==0.8.3
-urllib3==1.25.7
-ipympl==0.5.3
-numexpr==2.7.1
-prometheus-client==0.7.1
-psutil==5.7.0
-Pygments==2.6.1
-jupyter-core==4.6.3
-nbconvert==5.6.1
-zict==2.0.0
-zipp==3.1.0
-packaging==20.1
-blinker==1.4
-dill==0.3.1.1
-Mako==1.1.0
-requests==2.23.0
-tqdm==4.43.0
-Jinja2==2.11.1
-python-editor==1.0.4
-sortedcontainers==2.1.0
-python-dateutil==2.8.1
-pycurl==7.43.0.5
-jedi==0.16.0
-PyJWT==1.7.1
-scipy==1.4.1
-pyarrow==0.16.0
-wcwidth==0.1.8
-parso==0.6.2
-jsonschema==3.2.0
-pyspark==2.4.5
-widgetsnbextension==3.5.1
-async-generator==1.10
-SQLAlchemy==1.3.15
-backcall==0.1.0
-mistune==0.8.4
-pickleshare==0.7.5
-jupyter-client==6.0.0
-patsy==0.5.1
-entrypoints==0.3
-kiwisolver==1.1.0
-numba==0.48.0
-ptyprocess==0.6.0
-notebook==6.0.3
-PySocks==1.7.1
-ruamel.yaml.clib==0.2.0
-matplotlib==3.1.3
-pandocfilters==1.4.2
-pyzmq==19.0.0
-sympy==1.5.1
-cryptography==2.8
-ipython==7.13.0
-pamela==1.0.0
-numpy==1.18.1
-Pillow==7.0.0
-PyYAML==5.3
-ipykernel==5.1.4
-alembic==1.4.1
-nbformat==5.0.4
-virtualenv==20.0.16
-msgpack==1.0.0
-python-json-logger==0.1.11
-testpath==0.4.4
-defusedxml==0.6.0
-cloudpickle==1.3.0
-json5==0.9.0
-pexpect==4.8.0
-cycler==0.10.0
-pyrsistent==0.15.7
-distlib==0.3.0
-joblib==0.14.1
-ruamel-yaml==0.15.80
-conda==4.8.2
-cytoolz==0.10.1
-oauthlib==3.0.1
-scikit-learn==0.22.2.post1
-scikit-image==0.16.2
-pyOpenSSL==19.1.0
-imageio==2.8.0
-vincent==0.4.4
-bokeh==1.4.0
-networkx==2.4
-pyparsing==2.4.6
-statsmodels==0.11.1
-fsspec==0.6.2
-protobuf==3.11.4
-beautifulsoup4==4.8.2
-click==7.1.1
-certifi==2019.11.28
-prompt-toolkit==3.0.4
-Send2Trash==1.5.0
-pycosat==0.6.3
-pandas==1.0.2
-tblib==1.6.0
 seaborn==0.10.0
-MarkupSafe==1.1.1
-decorator==4.4.2
-importlib-metadata==1.5.0
-pycparser==2.20
-idna==2.9
-ipywidgets==7.5.1
-pytz==2019.3
-Cython==0.29.15
-jupyterlab==2.0.1
-cffi==1.14.0
-conda-package-handling==1.6.0
-tornado==6.0.4
-locket==0.2.0
-h5py==2.10.0
-ipython-genutils==0.2.0
-jupyterlab-server==1.0.7
-soupsieve==1.9.4
+zipp==3.1.0cytoolz==0.10.1
 distributed==2.12.0
+pamela==1.0.0
+packaging==20.1
+sympy==1.5.1
+requests==2.23.0
+ptyprocess==0.6.0
+backcall==0.1.0
+async-generator==1.10
+conda-package-handling==1.6.0
+entrypoints==0.3
+Send2Trash==1.5.0
+json5==0.9.0
+locket==0.2.0
+Mako==1.1.0
+certipy==0.1.3
+python-dateutil==2.8.1
+blinker==1.4
+pickleshare==0.7.5
+ipython==7.13.0
+networkx==2.4
+dill==0.3.1.1
+appdirs==1.4.3
+Jinja2==2.11.1
+scikit-learn==0.22.2.post1
+pyOpenSSL==19.1.0
+pycosat==0.6.3
+python-editor==1.0.4
+filelock==3.0.12
+six==1.14.0
+prometheus-client==0.7.1
+testpath==0.4.4
+tornado==6.0.4
+jsonschema==3.2.0
+psutil==5.7.0
+ruamel-yaml==0.15.80
+beautifulsoup4==4.8.2
+sortedcontainers==2.1.0
+tblib==1.6.0
+bleach==3.1.4
+Pillow==7.0.0
+dask==2.11.0
+scikit-image==0.16.2
+pycurl==7.43.0.5
+xlrd==1.2.0
+numexpr==2.7.1
+widgetsnbextension==3.5.1
+mistune==0.8.4
+zict==2.0.0
+conda==4.8.2
+idna==2.9
+jupyter-telemetry==0.0.5
+Cython==0.29.15
+prompt-toolkit==3.0.4
+pandas==1.0.2
+chardet==3.0.4
+tqdm==4.43.0
+alembic==1.4.1
+pyarrow==0.16.0
+kiwisolver==1.1.0
+cycler==0.10.0
+mpmath==1.1.0
+urllib3==1.25.7
+defusedxml==0.6.0
+fsspec==0.6.2
+pandocfilters==1.4.2
+webencodings==0.5.1
+imageio==2.8.0
+Pygments==2.6.1
+cffi==1.14.0
+soupsieve==1.9.4
+virtualenv==20.0.16
+notebook==6.0.3
+parso==0.6.2
+attrs==19.3.0
+nbconvert==5.6.1
+numpy==1.18.1
+ipython-genutils==0.2.0
+bokeh==1.4.0
+pyrsistent==0.15.7
+certifi==2019.11.28
+pexpect==4.8.0
+jupyter-core==4.6.3
+PyJWT==1.7.1
+statsmodels==0.11.1
+zipp==3.1.0
+msgpack==1.0.0
+matplotlib==3.1.3
+h5py==2.10.0
+jupyterlab-server==1.0.7
+PyYAML==5.3
+wcwidth==0.1.8
+jupyterlab==2.0.1
+pyspark==2.4.5
+toolz==0.10.0
+cryptography==2.8
+cloudpickle==1.3.0
+olefile==0.46
+jedi==0.16.0
+joblib==0.14.1
+click==7.1.1
+traitlets==4.3.3
+importlib-metadata==1.5.0
+jupyterhub==1.1.0
+SQLAlchemy==1.3.15
+terminado==0.8.3
+partd==1.1.0
+pytz==2019.3
+jupyter-client==6.0.0
+PyWavelets==1.1.1
+vincent==0.4.4
+pyparsing==2.4.6
+oauthlib==3.0.1
+decorator==4.4.2
+nbformat==5.0.4
+python-json-logger==0.1.11
+distlib==0.3.0
+ipykernel==5.1.4
+pyzmq==19.0.0
+ipywidgets==7.5.1
+MarkupSafe==1.1.1
+pycparser==2.20
+patsy==0.5.1
+scipy==1.4.1
+protobuf==3.11.4
+ruamel.yaml.clib==0.2.0
+numba==0.48.0
+PySocks==1.7.1
 HeapDict==1.0.1
+ipympl==0.5.3
